Fix handshake on small desktop

--- a/source/sass/_trumps.scss
+++ b/source/sass/_trumps.scss
@@ -2,3 +2,43 @@
 // .pod__seed {
 //   padding: 0;
 // }
+.trump-landingpage {
+  @include breakpoint("#{$gt-small-desktop} and #{$landscape}") {
+    display: flex;
+    flex-wrap: wrap;
+    .handshake,
+    .invitation {
+        flex-basis: 50%;
+        width: 50%;
+        min-height: 100%;
+        min-height: 100vh;
+        .pod__seed {
+          width: 100%;
+          min-height: 50%;
+          min-height: 50vh;
+        }
+    }
+    .handshake {
+      .tile {
+        width: 100%;
+        flex-grow: 1;
+      }
+      .tile + .tile {
+        flex-grow: 0;
+      }
+      .brand {
+        background-position: center;
+      }
+    }
+    .introduction,
+    .testimonial {
+      flex-basis: 100%;
+      width: 100%;
+      min-height: 50%;
+      min-height: 50vh;
+    }
+  }
+  @include breakpoint($gt-medium-desktop,$landscape) {
+    display: auto;
+  }
+}
