--- a/source/sass/blocks/_pod.scss
+++ b/source/sass/blocks/_pod.scss
@@ -174,6 +174,15 @@ Styleguide 4.1
       padding: 0 percentage(2/36) 0 percentage(4/36);
       padding: 0 2/36*100vw 0 4/36*100vw;
     }
+    &--baboon {
+      min-height: 50%;
+      min-height: 50vh;
+    }
+    &--baboon &__seed {
+      width: 50%;
+      min-height: 100%;
+      min-height: 50vh;
+    }
   }
   @include breakpoint($gt-medium-desktop) {
     &__seed {
